# LocalLens

./: README.md
API/: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  deploy.sh  main.py  pyproject.toml  restaurant_coordinate_2.txt
API/terraform/: .gitignore  README.md  main.tf  outputs.tf  setup-env.sh  terraform.tfvars.example  variables.tf
API/test_resources/: restaurant_coordinate.txt  restaurant_coordinate_3.txt
Crop/: Crop.esproj  README.md
Crop/Assets/: Scene.scene
Crop/Assets/Prefabs/: Scanner.prefab
Crop/Assets/Scripts/: .venv  APIKeyHint.ts  ChatGPT.ts  PictureBehavior.ts  PictureController.ts  handMouse.ts  imageCapture.ts  main.ts  takePicture.ts
HelloNeighbour/: HelloNeighbour.esproj
HelloNeighbour/Assets/: ImageMaterial.mat  Scene.scene  cameraCaptureModule.ts  getCurrentLocation.ts  getCurrentLocationModule.ts  main.ts
HelloNeighbour/Assets/Scripts/: handMouse.ts
HelloNeighbour/Assets/SpectaclesInteractionKit.lspkg/Assets/Meshes/: LeftHandMeshIndexThumb.mesh  RayMesh.mesh  RightHandMeshIndexThumb.mesh
HelloNeighbour/Assets/SpectaclesInteractionKit.lspkg/Assets/Shaders/: RayShader.ss_graph  TargetOutline.ss_graph
HelloNeighbour/Assets/SpectaclesInteractionKit.lspkg/Assets/Shaders/BaseHandVisualsShaders/: FingerHighlightAdd.ss_graph  FingerHighlightOpaque.ss_graph  FingerTipGlow.ss_graph  HandOccluder.ss_graph  NoDraw.ss_graph
LocalLens/: LocalLens.esproj
LocalLens/Assets/: Scene.scene
LocalLens/Assets/Scripts/: CameraImageEncoder.ts  handMouseScript.ts  locationModule.ts
(+2 files in other folders)
