[project]
name = "api"
version = "0.1.0"
description = "Restaurant Identifier API using Gemini and Google Places"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "googlemaps>=4.10.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.9",
]
